fixed spacing and finsihed mobile compatibility

--- a/getinvolved.css
+++ b/getinvolved.css
@@ -47,6 +47,13 @@ article{
 }
 
 @media only screen and (max-width: 412px){
+    
+    .container-fluid{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        
+    }
     .navbar-brand{
         font-size: 2em !important;
         padding: 0 1%;
